--- a/benchmark/Cargo.toml
+++ b/benchmark/Cargo.toml
@@ -17,5 +17,5 @@ rand = "0.8.5"
 criterion = { version = "0.4.0", features = ["html_reports"] }
 
 [[bench]]
-name = "falcon_rust"
+name = "txn_bench"
 harness = false
