--- a/benchmark/Cargo.toml
+++ b/benchmark/Cargo.toml
@@ -13,9 +13,18 @@ itertools = "0.12.0"
 pqcrypto-falcon = "0.3.0"
 rand = "0.8.5"
 
+# additional
+secp256k1 = { version = "0.29.0", features = ["rand"] }
+bitcoin_hashes = { version = "0.14", default-features = false}
+
+
 [dev-dependencies]
 criterion = { version = "0.4.0", features = ["html_reports"] }
 
 [[bench]]
 name = "txn_bench"
 harness = false
+
+[[bench]]
+name = "ec_bench"
+harness =false
