--- a/falcon-rust/Cargo.toml
+++ b/falcon-rust/Cargo.toml
@@ -23,14 +23,17 @@ hex = "0.4.3"
 sha3 = "0.10.8"
 num-complex = "0.4.4"
 num = "0.4.1"
+rand_core = "0.6.4"
 
+[features]
+pk_recovery_mode = []
 
 [dev-dependencies]
 proptest = "1.4.0"
 proptest-derive = "0.4.0"
-
-[profile.test.package.proptest]
-opt-level = 3
-
-[profile.test.package.rand_chacha]
-opt-level = 3
+#
+#[profile.test.package.proptest]
+#opt-level = 3
+#
+#[profile.test.package.rand_chacha]
+#opt-level = 3
