--- a/benchmark/Cargo.toml
+++ b/benchmark/Cargo.toml
@@ -22,7 +22,11 @@ bitcoin_hashes = { version = "0.14", default-features = false}
 criterion = { version = "0.4.0", features = ["html_reports"] }
 
 [[bench]]
-name = "txn_bench"
+name = "FALCON_standard_bench"
+harness = false
+
+[[bench]]
+name = "FALCON_pk_recovery_mode_bench"
 harness = false
 
 [[bench]]
